--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "dependencies": {
@@ -41,7 +41,9 @@
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
+    "jest": "^30.0.5",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
     "swagger-autogen": "^2.23.7"
   }
 }
